--- a/geocities/style.css
+++ b/geocities/style.css
@@ -1,7 +1,7 @@
 header {
     display: block;
     background-image: url(https://web.archive.org/web/20090830144137im_/http://geocities.com/sheryl_32/nature/frogdiveborder.gif);
-    background-size: 100%;
+    background-size: 100% 80%;
     background-repeat: no-repeat;
     width: 100%;
     padding-bottom: 5em;
@@ -36,6 +36,7 @@ body {
     text-align: center;
     margin-top: 0;
     margin-bottom: 0em;
+    height: 80%;
 }
 h2{
     font-family:Georgia, 'Times New Roman', Times, serif;
