--- a/final/style.css
+++ b/final/style.css
@@ -134,7 +134,8 @@ h2{
     color: transparent;
     max-width: 100%;
     width: 100%;
-    line-height: 100%;
+    max-height: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
