--- a/final/style.css
+++ b/final/style.css
@@ -6,6 +6,10 @@ body{
     cursor: url(images/NormalSelect.png), auto;
     overflow-x: hidden;
 }
+#wrapper{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 header{
     z-index: 2;
     max-width: 100%;
