--- a/final/style.css
+++ b/final/style.css
@@ -1,10 +1,11 @@
 
 
-body{
+body, html{
     margin: 0;
     padding: 0;
     cursor: url(images/NormalSelect.png), auto;
     overflow-x: hidden;
+    position: relative;
 }
 #wrapper{
     overflow-x: hidden;
