--- a/final/style.css
+++ b/final/style.css
@@ -9,8 +9,10 @@ body, html{
 }
 #wrapper{
     overflow-x: hidden;
-    overflow-y: hidden;
-    position: relative;
+    overflow-y: auto;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
 }
 header{
     z-index: 2;
@@ -206,5 +208,8 @@ img{
     .column {
       flex: 90%;
       max-width: 90%;
+    }
+    .wrapper {
+        overflow-x: hidden;
     }
   }
