--- a/final/style.css
+++ b/final/style.css
@@ -210,6 +210,7 @@ img{
       max-width: 90%;
     }
     .wrapper {
-        overflow-x: hidden;
+        overflow: hidden;
+        max-width: 100%;
     }
   }
