--- a/final/style.css
+++ b/final/style.css
@@ -151,7 +151,7 @@ h2{
     animation: fade-out 0.5s ease;
 }
 
-.container:hover .overlay{
+.container:hover:active .overlay{
     background-color: rgb(81, 81, 81);
     color: white;
     animation: fade 0.75s ease;
