--- a/final/style.css
+++ b/final/style.css
@@ -151,13 +151,18 @@ h2{
     animation: fade-out 0.5s ease;
 }
 
-.container:hover:active .overlay{
+.container:hover .overlay{
     background-color: rgb(81, 81, 81);
     color: white;
     animation: fade 0.75s ease;
     z-index: 1;
 }
-
+.container:active .overlay{
+    background-color: rgb(81, 81, 81);
+    color: white;
+    animation: fade 0.75s ease;
+    z-index: 1;
+}
 
 @keyframes fade {
     0% {background-color:transparent; color: transparent;}
