--- a/final/style.css
+++ b/final/style.css
@@ -157,6 +157,12 @@ h2{
     animation: fade 0.75s ease;
     z-index: 1;
 }
+.container:focus .overlay{
+    background-color: rgb(81, 81, 81);
+    color: white;
+    animation: fade 0.75s ease;
+    z-index: 1;
+}
 .container:active .overlay{
     background-color: rgb(81, 81, 81);
     color: white;
