--- a/final/style.css
+++ b/final/style.css
@@ -143,7 +143,7 @@ h2{
     max-width: 100%;
     width: 100%;
     max-height: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -188,7 +188,7 @@ h2{
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    max-height: 100%;
+    max-height: auto;
 }
   
 img{
@@ -224,22 +224,5 @@ img{
         overflow: hidden;
         max-width: 100%;
     }
-    .container:hover .overlay{
-        background-color: rgb(81, 81, 81);
-        color: white;
-        animation: fade 0.75s ease;
-        z-index: 1;
-    }
-    .container:focus .overlay{
-        background-color: rgb(81, 81, 81);
-        color: white;
-        animation: fade 0.75s ease;
-        z-index: 1;
-    }
-    .container:active .overlay{
-        background-color: rgb(81, 81, 81);
-        color: white;
-        animation: fade 0.75s ease;
-        z-index: 1;
-    }
+
   }
