--- a/final/style.css
+++ b/final/style.css
@@ -224,5 +224,16 @@ img{
         overflow: hidden;
         max-width: 100%;
     }
-
+    .container:focus .overlay{
+        background-color: rgb(81, 81, 81);
+        color: white;
+        animation: fade 0.75s ease;
+        z-index: 1;
+    }
+    .container:active .overlay{
+        background-color: rgb(81, 81, 81);
+        color: white;
+        animation: fade 0.75s ease;
+        z-index: 1;
+    }
   }
