--- a/final/style.css
+++ b/final/style.css
@@ -216,6 +216,7 @@ img{
   
   
 @media screen and (max-width: 600px) {
+    
     .column {
       flex: 90%;
       max-width: 90%;
@@ -223,6 +224,10 @@ img{
     .wrapper {
         overflow: hidden;
         max-width: 100%;
+    }
+    .overlay{
+        width: 100%;
+        height: 100%;
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
@@ -236,4 +241,6 @@ img{
         animation: fade 0.75s ease;
         z-index: 1;
     }
+    
+    
   }
