--- a/final/style.css
+++ b/final/style.css
@@ -234,12 +234,14 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
+        height: 100%;
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
+        height: 100%;
     }
     
     
