--- a/final/style.css
+++ b/final/style.css
@@ -235,6 +235,7 @@ img{
         animation: fade 0.75s ease;
         z-index: 1;
         height: 100%;
+        line-height: 100%;
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
@@ -242,6 +243,7 @@ img{
         animation: fade 0.75s ease;
         z-index: 1;
         height: 100%;
+        line-height: 100%;
     }
     
     
