--- a/final/style.css
+++ b/final/style.css
@@ -157,18 +157,7 @@ h2{
     animation: fade 0.75s ease;
     z-index: 1;
 }
-.container:focus .overlay{
-    background-color: rgb(81, 81, 81);
-    color: white;
-    animation: fade 0.75s ease;
-    z-index: 1;
-}
-.container:active .overlay{
-    background-color: rgb(81, 81, 81);
-    color: white;
-    animation: fade 0.75s ease;
-    z-index: 1;
-}
+
 
 @keyframes fade {
     0% {background-color:transparent; color: transparent;}
@@ -237,4 +226,11 @@ img{
         animation: fade 0.75s ease;
         z-index: 1;
     }
+    .container:hover .overlay{
+        background-color: rgb(81, 81, 81);
+        color: white;
+        animation: fade 0.75s ease;
+        z-index: 1;
+    }
+
   }
