--- a/final/style.css
+++ b/final/style.css
@@ -219,18 +219,21 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
+        min-height: 100%;
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
+        min-height: 100%;
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
+        min-height: 100%;
     }
 
 
