--- a/final/style.css
+++ b/final/style.css
@@ -219,30 +219,21 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        display: inline-flex;
-        line-height: 100vh;
-        min-height: 100vh;
-        object-fit: fill;
+        bottom: 0;
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        display: inline-flex;
-        line-height: 100vh;
-        min-height: 100vh;
-        object-fit: fill;
+        bottom: 0;
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        display: inline-flex;
-        line-height: 100vh;
-        min-height: 100vh;
-        object-fit: fill;
+        bottom: 0;
     }
 
 
