--- a/final/style.css
+++ b/final/style.css
@@ -235,6 +235,24 @@ img{
         z-index: 1;
         bottom: 0;
     }
-
+    .overlay{
+        position: absolute;
+        background-color: transparent;
+        opacity: 75%;
+        margin-top: 8px;
+        font-size: 175%;
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        color: transparent;
+        max-width: 100%;
+        width: 100%;
+        max-height: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: opacity 0.1s ease 0.51s;
+        animation: fade-out 0.5s ease;
+    }
 
   }
