--- a/final/style.css
+++ b/final/style.css
@@ -219,24 +219,21 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        bottom: 0;
-        top: 0;
+
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        bottom: 0;
-        top: 0;
+
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        bottom: 0;
-        top: 0;
+
     }
     .overlay{
         position: absolute;
@@ -253,7 +250,7 @@ img{
         height: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center stretch;
         transition: opacity 0.1s ease 0.51s;
         animation: fade-out 0.5s ease;
     }
