--- a/final/style.css
+++ b/final/style.css
@@ -246,8 +246,7 @@ img{
         color: transparent;
         max-width: 100%;
         width: 100%;
-        max-height: 100%;
-        height: 100%;
+        height: calc(100vh - calc(100vh - 100%));
         display: flex;
         align-items: center;
         justify-content: center stretch;
