--- a/final/style.css
+++ b/final/style.css
@@ -219,39 +219,22 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-
+        height: calc(100vh - calc(100vh - 100%));
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-
+        height: calc(100vh - calc(100vh - 100%));
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-
-    }
-    .overlay{
-        position: absolute;
-        background-color: transparent;
-        opacity: 75%;
-        margin-top: 8px;
-        font-size: 175%;
-        text-align: center;
-        font-family: 'Lato', sans-serif;
-        color: transparent;
-        max-width: 100%;
-        width: 100%;
         height: calc(100vh - calc(100vh - 100%));
-        display: flex;
-        align-items: center;
-        justify-content: center stretch;
-        transition: opacity 0.1s ease 0.51s;
-        animation: fade-out 0.5s ease;
     }
+
 
   }
