--- a/final/style.css
+++ b/final/style.css
@@ -160,12 +160,12 @@ h2{
 
 
 @keyframes fade {
-    0% {background-color:transparent; color: transparent;}
-    100% {background-color:rgb(81, 81, 81); color: white;}
+    0% {background-color:transparent; color: transparent; max-height: calc(100vh - calc(100vh - 100%));}
+    100% {background-color:rgb(81, 81, 81); color: white; max-height: calc(100vh - calc(100vh - 100%));}
 }
 @keyframes fade-out {
-    0% {background-color:rgb(81, 81, 81); color: white;}
-    100% {background-color:transparent; color: transparent;}
+    0% {background-color:rgb(81, 81, 81); color: white; max-height: calc(100vh - calc(100vh - 100%));}
+    100% {background-color:transparent; color: transparent; max-height: calc(100vh - calc(100vh - 100%));}
 }
 
 
