--- a/final/style.css
+++ b/final/style.css
@@ -235,4 +235,8 @@ img{
         z-index: 1;
         
     }
+    .overlay{
+        max-height: calc(100vh - calc(100vh - 100%));
+        height: auto;
+    }
   }
