--- a/final/style.css
+++ b/final/style.css
@@ -238,5 +238,6 @@ img{
     .overlay{
         max-height: calc(100vh - calc(100vh - 100%));
         height: auto;
+        animation-duration: 0s;
     }
   }
