--- a/final/style.css
+++ b/final/style.css
@@ -210,6 +210,9 @@ img{
       flex: 90%;
       max-width: 90%;
     }
+    .column img{
+        aspect-ratio: auto;
+    }
     .wrapper {
         overflow: hidden;
         max-width: 100%;
@@ -219,20 +222,20 @@ img{
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        
+        height: calc(100vh - calc(100vh - 100%));
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        
+        height: calc(100vh - calc(100vh - 100%));
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
         animation: fade 0.75s ease;
         z-index: 1;
-        
+        height: calc(100vh - calc(100vh - 100%));
     }
   }
