--- a/final/style.css
+++ b/final/style.css
@@ -140,9 +140,8 @@ h2{
     text-align: center;
     font-family: 'Lato', sans-serif;
     color: transparent;
-    
     width: 100%;
-    height: inherit;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -213,30 +212,27 @@ img{
         overflow: hidden;
         max-width: 100%;
     }
-    .overlay{
-        max-width: 100%; 
-        width: 100%; 
-        height: calc(100vh - calc(100vh - 100%)) !important; 
-        max-height: calc(100vh - calc(100vh - 100%)) !important;
-    }
     .container:hover .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-
+        height: calc(100vh - calc(100vh - 100%)) !important; 
+        max-height: calc(100vh - calc(100vh - 100%)) !important;
         z-index: 1;
 
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-
+        height: calc(100vh - calc(100vh - 100%)) !important; 
+        max-height: calc(100vh - calc(100vh - 100%)) !important;
         z-index: 1;
         
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-
+        height: calc(100vh - calc(100vh - 100%)) !important; 
+        max-height: calc(100vh - calc(100vh - 100%)) !important;
         z-index: 1;
 
     }
