--- a/final/style.css
+++ b/final/style.css
@@ -212,27 +212,27 @@ img{
         overflow: hidden;
         max-width: 100%;
     }
+    .overlay{
+        height: calc(100vh - calc(100vh - 100%)) !important; 
+    }
     .container:hover .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-        height: calc(100vh - calc(100vh - 100%)) !important; 
-        max-height: calc(100vh - calc(100vh - 100%)) !important;
+
         z-index: 1;
 
     }
     .container:focus .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-        height: calc(100vh - calc(100vh - 100%)) !important; 
-        max-height: calc(100vh - calc(100vh - 100%)) !important;
+
         z-index: 1;
         
     }
     .container:active .overlay{
         background-color: rgb(81, 81, 81);
         color: white;
-        height: calc(100vh - calc(100vh - 100%)) !important; 
-        max-height: calc(100vh - calc(100vh - 100%)) !important;
+
         z-index: 1;
 
     }
