--- a/final/style.css
+++ b/final/style.css
@@ -146,24 +146,9 @@ h2{
     animation: fade-out 0.5s ease;
 }
 
-.lastoverlay{
-    position: absolute;
-    background-color: transparent;
-    opacity: 75%;
-    margin-top: 8px;
-    aspect-ratio: 6/9;
-    font-size: 175%;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    color: transparent;
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    animation: fade-out 0.5s ease;
+#lastoverlay{
+    top: 0 !important;
+    left: 0 !important;
 }
 
 .container:hover .lastoverlay{
