--- a/final/style.css
+++ b/final/style.css
@@ -149,9 +149,24 @@ h2{
 #lastoverlay{
     top: 0 !important;
     left: 0 !important;
+    position: absolute;
+    background-color: transparent;
+    opacity: 75%;
+    margin-top: 8px;
+    aspect-ratio: 6/9;
+    font-size: 175%;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    color: transparent;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: fade-out 0.5s ease;
 }
 
-.container:hover .lastoverlay{
+.container:hover #lastoverlay{
     background-color: rgb(81, 81, 81);
     color: white;
     animation: fade 0.75s ease;
