--- a/final/style.css
+++ b/final/style.css
@@ -234,6 +234,7 @@ img{
     }
     #lastoverlay{
         height: calc(100vh - calc(100vh - 100%));
+        top: 0 !important;
     }
 
     .container:hover .overlay{
