--- a/final/style.css
+++ b/final/style.css
@@ -234,7 +234,7 @@ img{
     }
     #lastoverlay{
         height: calc(100vh - calc(100vh - 100%));
-        position: relative;
+        top: -50%;
     }
 
     .container:hover .overlay{
