--- a/final/style.css
+++ b/final/style.css
@@ -233,8 +233,10 @@ img{
         height: calc(100vh - calc(100vh - 100%));
     }
     #lastoverlay{
-        height: calc(100vh - calc(100vh - 100%));
-        top: -50%;
+        height: calc(100vh - calc(100vh - 100%)) !important;
+        left: 0 !important;
+        top: 0 !important;
+        position: absolute !important;
     }
 
     .container:hover .overlay{
