--- a/final/style.css
+++ b/final/style.css
@@ -1,4 +1,5 @@
 body, html{
+    min-height: 100%;
     margin: 0;
     padding: 0;
     cursor: url(images/NormalSelect.png), auto;
@@ -48,8 +49,9 @@ nav{
 }
 
 .icon{
-    max-width: 3vh;
-    height: 3vh;
+    max-width: 5vh;
+    width: auto;
+    max-height: 50%;
     margin-right: 2vw;
 }
 
@@ -59,15 +61,21 @@ nav{
     align-items: center;
     font-family: 'Lato', sans-serif;
 }
-
 footer{
-    
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    min-height: 10%;
+    background-color: white;
+}
+
+#footerwrap{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     max-width: 80vw;
     margin: auto auto 0 auto;
-    position: sticky;
+    bottom: 0;
 }
 
 #maintext{
@@ -78,10 +86,14 @@ h1{
     font-family: 'Josefin Sans', sans-serif;
 }
 
+
 h2{
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-weight: 300;
     font-size: 1.2rem;
+}
+h3{
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 #mainpagecontent{
@@ -89,8 +101,9 @@ h2{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    max-height: 80vh;
+    min-height: 100%;
     height: auto;
+
 }
 
 #artpage{
@@ -207,14 +220,47 @@ img{
     padding-left: 1.25%;
 }
   
-
-
 @media screen and (max-width: 900px) {
     .column {
       flex: 45%;
       max-width: 45%;
     }
+    #mainpagecontent{
+        flex-direction: column-reverse;
+        justify-content: center;
+        text-align: left;
+        align-items: center;
+        min-width: 100%;
+        min-height: 100%;
+        height: auto;
+        width: auto;
+    }
+    #maintext{
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+        max-width: 70%;
+        height: auto;
+    }
+    #mainicon{
+        height: 150%;
+        width: auto;
+        flex-grow: 1;
+    }
+
+    #intro{
+        font-size: 150%;
+    }
+    #tagline{
+        font-size: 100%;
+        margin-top: 0;
+    }
+    .contact p{
+        content-visibility: hidden;
+    }
   }
+
+
   
   
 @media screen and (max-width: 600px) {
@@ -255,6 +301,36 @@ img{
         color: white;
         z-index: 2;
     }
+
+    #mainpagecontent{
+        flex-direction: column-reverse;
+        justify-content: center;
+        text-align: left;
+        align-items: none;
+        width: 100%;
+        max-height: 85%;
+        margin: auto;
+    }
+    #maintext{
+        display: flex;
+        flex-direction: column;
+        max-width: 70%;
+    }
+    #mainicon{
+        max-width: 80%;
+        height: auto;
+    }
+    #intro{
+        font-size: 150%;
+    }
+    #tagline{
+        font-size: 100%;
+        margin-top: 0;
+    }
+    .contact p{
+        content-visibility: hidden;
+    }
+    
   }
 
 
