--- a/final/style.css
+++ b/final/style.css
@@ -95,6 +95,11 @@ h2{
 h3{
     font-family: 'Josefin Sans', sans-serif;
 }
+#home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 #mainpagecontent{
     display: flex;
@@ -103,7 +108,8 @@ h3{
     align-items: center;
     min-height: 100%;
     height: auto;
-
+    margin: auto;
+    padding: auto;
 }
 
 #artpage{
@@ -219,8 +225,39 @@ img{
 #portfoliotext{
     padding-left: 1.25%;
 }
-  
+
 @media screen and (max-width: 900px) {
+    #mainpagecontent{
+        flex-direction: column-reverse;
+        justify-content: center;
+        text-align: left;
+        align-items: none;
+        width: 100%;
+        max-height: 85%;
+        margin: auto;
+    }
+    #maintext{
+        display: flex;
+        flex-direction: column;
+        max-width: 70%;
+    }
+    #mainicon{
+        max-width: 50%;
+        width: auto;
+    }
+    #intro{
+        font-size: 150%;
+    }
+    #tagline{
+        font-size: 100%;
+        margin-top: 0;
+    }
+    .contact p{
+        content-visibility: hidden;
+    }
+}
+
+@media screen and (max-width: 700px) {
     .column {
       flex: 45%;
       max-width: 45%;
@@ -229,25 +266,20 @@ img{
         flex-direction: column-reverse;
         justify-content: center;
         text-align: left;
-        align-items: center;
-        min-width: 100%;
-        min-height: 100%;
-        height: auto;
-        width: auto;
+        align-items: none;
+        width: 100%;
+        max-height: 85%;
+        margin: auto;
     }
     #maintext{
         display: flex;
-        flex-grow: 1;
         flex-direction: column;
         max-width: 70%;
-        height: auto;
     }
     #mainicon{
-        height: 150%;
+        max-width: 70%;
         width: auto;
-        flex-grow: 1;
     }
-
     #intro{
         font-size: 150%;
     }
@@ -314,7 +346,7 @@ img{
     #maintext{
         display: flex;
         flex-direction: column;
-        max-width: 70%;
+        max-width: 80%;
     }
     #mainicon{
         max-width: 80%;
@@ -328,7 +360,7 @@ img{
         margin-top: 0;
     }
     .contact p{
-        content-visibility: hidden;
+        display: none;
     }
     
   }
