--- a/final/style.css
+++ b/final/style.css
@@ -6,6 +6,7 @@ body, html{
     overflow-x: hidden;
     position: relative;
 }
+
 #wrapper{
     overflow-x: hidden;
     overflow-y: auto;
@@ -13,14 +14,15 @@ body, html{
     width: 100%;
     height: 100vh;
 }
+
 header{
-    z-index: 2;
+    z-index: 3;
     max-width: 100%;
     width: 100%;
     max-height: 8vh;
     height: 8vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     top: 0;
@@ -34,13 +36,17 @@ a{
     cursor: url(images/LinkSelect.png), auto;
 }
 nav{
-    max-width: 75%;
     width: 75%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     margin: auto;
     padding: 0;
+}
+.nav-image{
+    max-height: 7vh;
+    width: auto;
 }
 
 #mainicon{
@@ -62,38 +68,116 @@ nav{
     font-family: 'Lato', sans-serif;
 }
 footer{
+    z-index: 3;
     position: fixed;
     bottom: 0;
     width: 100%;
     min-height: 10%;
+    max-height: 10%;
     background-color: white;
+    opacity: 75%;
 }
 
 #footerwrap{
+    z-index: 4;
+    max-height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    max-width: 80vw;
-    margin: auto auto 0 auto;
-    bottom: 0;
+    max-width: 100%;
+    margin: 0.8% 0 0 0;
+}
+li{
+    margin: 0;
+    padding: 0;
+}
+
+#skillsbar{
+    background-color: lightgray;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    max-height: 5%;
+    line-height: 10%;
+}
+
+
+#skills{
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    list-style: none;
+}
+
+#skillstext{
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 1.5rem;
+    
+}
+
+#resumepage{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    max-width: 100%;
+    justify-content: center;
+    margin-bottom: 10%;
 }
 
 #maintext{
     max-width: 40vw;
 }
 
+#resumetitle{
+width: 100%;
+text-align: center;
+}
+
 h1{
     font-family: 'Josefin Sans', sans-serif;
 }
+#resumeitems{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
+.sectiontitle{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+hr{
+background-color: gray;
+width: 100%;
+height: 1px;
+}
 
 h2{
     font-family: 'Plus Jakarta Sans', sans-serif;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 1.2rem;
+    margin-bottom: 0%;
+    margin-top: 5%;
 }
 h3{
     font-family: 'Josefin Sans', sans-serif;
+    font-weight: 500;
+}
+h4{
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 400;
+    color: gray;
+}
+p{
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 300;
+    word-spacing:   0.1em;
 }
 #home{
     display: flex;
@@ -128,13 +212,37 @@ h3{
     margin: auto;
     max-width: 100%;
     justify-content: center;
-  }
-  
+}
+
+#resumecolumn{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    flex: 50%;
+    width: 50%;
+    margin: auto;
+    top: 0;
+
+}
+.itemtitle{
+    margin-bottom: 4px;
+    margin-top: 32px;
+}
+#points{
+    list-style: outside none circle;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 400;
+    line-height: 1.2rem;
+}
+h4{
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
 .column {
     flex: 22.5%;
     max-width: 22.5%;
-    padding: 0 4px;
-  }
+    padding: 0 4px 80px 4px;
+}
   
 .column img {
     position: relative;
@@ -226,6 +334,7 @@ img{
     padding-left: 1.25%;
 }
 
+
 @media screen and (max-width: 900px) {
     #mainpagecontent{
         flex-direction: column-reverse;
@@ -254,6 +363,16 @@ img{
     }
     .contact p{
         content-visibility: hidden;
+    }
+    #footerwrap{
+        margin: 1.3% auto auto auto;
+    }
+    #resumepage{
+        margin-bottom: 15%;
+    }
+    #resumecolumn{
+        flex: 70%;
+        width: 70%;
     }
 }
 
@@ -289,6 +408,13 @@ img{
     }
     .contact p{
         content-visibility: hidden;
+    }
+    #footerwrap{
+        margin: 1.5% auto auto auto;
+    }
+    #resumecolumn{
+        flex: 80%;
+        width: 80%;
     }
   }
 
@@ -349,7 +475,7 @@ img{
         max-width: 90%;
     }
     #mainicon{
-        max-width: 90%;
+        max-width: 80%;
         height: auto;
     }
     #intro{
@@ -362,7 +488,13 @@ img{
     .contact p{
         display: none;
     }
-    
+    #footerwrap{
+        margin: 2% auto auto auto;
+    }
+    #resumecolumn{
+        flex: 90%;
+        width: 90%;
+    }
   }
 
 
