--- a/final/style.css
+++ b/final/style.css
@@ -509,7 +509,7 @@ img{
         width: 90%;
     }
     #resumepage{
-        margin-bottom: 25%;
+        margin-bottom: 80px;
         overflow-y: visible !important;
     }
     .icon{
