--- a/final/style.css
+++ b/final/style.css
@@ -508,13 +508,12 @@ img{
         flex: 90%;
         width: 90%;
     }
-    #resumepage{
-        margin-bottom: 80px;
-        overflow-y: visible !important;
-        padding-bottom: 20px;
-    }
     .icon{
         max-height: 30px;
+    }
+    #lastsection{
+        margin-bottom: 60px;
+        padding-bottom: 20px;
     }
   }
 
