--- a/final/style.css
+++ b/final/style.css
@@ -198,7 +198,6 @@ p{
     min-height: 100%;
     height: auto;
     margin: auto;
-    padding: auto;
 }
 
 #artpage{
@@ -332,7 +331,6 @@ h4{
     align-items: center;
     justify-content: center;
     max-width: 100%;
-    max-height: auto;
 }
   
 img{
@@ -350,7 +348,6 @@ img{
         flex-direction: column-reverse;
         justify-content: center;
         text-align: left;
-        align-items: none;
         width: 100%;
         max-height: 85%;
         margin: auto;
@@ -372,7 +369,7 @@ img{
         margin-top: 0;
     }
     .contact p{
-        content-visibility: hidden;
+        display: none;
     }
     #footerwrap{
         margin: 1.3% auto auto auto;
@@ -395,7 +392,6 @@ img{
         flex-direction: column-reverse;
         justify-content: center;
         text-align: left;
-        align-items: none;
         width: 100%;
         max-height: 85%;
         margin: auto;
@@ -417,7 +413,7 @@ img{
         margin-top: 0;
     }
     .contact p{
-        content-visibility: hidden;
+        display: none;
     }
     #footerwrap{
         margin: 1.5% auto auto auto;
@@ -477,7 +473,6 @@ img{
         flex-direction: column-reverse;
         justify-content: center;
         text-align: left;
-        align-items: none;
         width: 100%;
         max-height: 85%;
         margin: auto;
